[gd_scene load_steps=9 format=3]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1"]
[ext_resource type="ShaderMaterial" path="res://shaders/vignette_material.tres" id="2"]
[ext_resource type="ShaderMaterial" path="res://shaders/fog_material.tres" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/hud.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/pause_menu.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/ui/debug_overlay.tscn" id="6"]
[ext_resource type="Script" path="res://scenes/main/fog_controller.gd" id="7"]
[ext_resource type="Script" path="res://scenes/main/camera_controller.gd" id="8"]

[node name="Main" type="Node2D"]
script = ExtResource(1)

[node name="WorldRoot" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="WorldRoot"]
current = true
position_smoothing_enabled = true
position_smoothing_speed = 5.0
script = ExtResource(8)

[node name="PlayerContainer" type="Node2D" parent="WorldRoot"]

[node name="LightGroup" type="Node2D" parent="WorldRoot"]

[node name="Effects" type="CanvasLayer" parent="."]
layer = 1

[node name="Vignette" type="ColorRect" parent="Effects"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.0, 0.0, 0.0, 1.0)
material = ExtResource(2)

[node name="FogMask" type="ColorRect" parent="Effects"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(1, 1, 1, 1)
material = ExtResource(3)
script = ExtResource(7)

[node name="HUD" parent="Effects" instance=ExtResource(4)]

[node name="PauseMenu" parent="Effects" instance=ExtResource(5)]
visible = false

[node name="DebugOverlay" parent="Effects" instance=ExtResource(6)]
visible = false

[node name="EclipseTimer" type="Timer" parent="."]
wait_time = 75.0
one_shot = false
autostart = false
